--- a/DMAE_Missing_Imputation_EnerNOC_Simul.ipynb
+++ b/DMAE_Missing_Imputation_EnerNOC_Simul.ipynb
@@ -37,7 +37,7 @@
       "cell_type": "code",
       "source": [
         "MISS_NUM = '12' # 12, 24, 36, 48\n",
-        "DATA_NUM = '716' # 14, 716"
+        "DATA_NUM = '716' # 14, 366, 716"
       ],
       "metadata": {
         "id": "TGbpFGAhYxj2"
