--- a/DMAE_Missing_Imputation_EnerNOC_Eval.ipynb
+++ b/DMAE_Missing_Imputation_EnerNOC_Eval.ipynb
@@ -37,7 +37,7 @@
       "cell_type": "code",
       "source": [
         "MISS_NUM = '48' # 12, 24, 36, 48\n",
-        "DATA_NUM = '14' # 14, 716"
+        "DATA_NUM = '14' # 14, 366, 716"
       ],
       "metadata": {
         "id": "Nc7Nnh8IoWI1"
@@ -658,7 +658,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Example (DATA716_MISS36)\n",
+        "# Feature PDF\n",
         "\n",
         "fake_z_dmae1 = dmae1.forward(torch.tensor(data_test_miss, dtype=torch.float))[0].detach().numpy().flatten()\n",
         "fake_z_dmae2 = dmae2.forward(torch.tensor(data_test_miss, dtype=torch.float))[0].detach().numpy().flatten()\n",
